Updating license header